--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h1 class="fade-in">Hi, I'm John Doe</h1>
+                    <h1 class="fade-in">Hi, I'm Abdul Kalam</h1>
                     <p class="fade-in delay-1">Full Stack Web Developer passionate about creating beautiful, functional websites and applications. Let's build something great together!</p>
                     <div class="fade-in delay-2">
                         <a href="#contact" class="btn btn-primary me-2">Get In Touch</a>
