--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                             </div>
                             <div>
                                 <h5>Location</h5>
-                                <p>San Francisco, CA</p>
+                                <p>Lahore Pakistan</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-4">
@@ -786,7 +786,7 @@
                             </div>
                             <div>
                                 <h5>Email</h5>
-                                <p>john.doe@example.com</p>
+                                <p>kalamshar786@example.com</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-4">
@@ -795,7 +795,7 @@
                             </div>
                             <div>
                                 <h5>Phone</h5>
-                                <p>+1 (555) 123-4567</p>
+                                <p>+923097502122</p>
                             </div>
                         </div>
                     </div>
