--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
     <!-- Footer -->
     <footer class="py-4">
         <div class="container">
-            <p>&copy; 2023 John Doe. All rights reserved.</p>
+            <p>&copy; 2025 Abdul Kalam. All rights reserved.</p>
         </div>
     </footer>
 
