--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="col-lg-7">
                     <h3>GHL Entry‑Level Expert & Automation Intern</h3>
                     <p>
-                        I specialize in setting up and optimizing GoHighLevel (GHL) for small businesses and agencies. Since <strong>June 2, 2025</strong>, I've been an <strong>Automation Intern at Brainstorm Solutions</strong>, focusing on end‑to‑end CRM setups—funnels, pipelines, calendars, forms/surveys, email/SMS, and smart workflows.
+                        I specialize in setting up and optimizing GoHighLevel (GHL) for small businesses and agencies. Since <strong>June 2, 2025</strong>, I've been an <strong> GHL Intern at Brainstorm Solutions</strong>, focusing on end‑to‑end CRM setups—funnels, pipelines, calendars, forms/surveys, email/SMS, and smart workflows.
                     </p>
                     <p>
                         I work across niches including <strong>Real Estate</strong> and <strong>Fitness</strong>, integrating tools like <strong>Stripe, Twilio/JustCall, Zoom, Calendly, Google Sheets</strong>, and notifications (e.g., <strong>Pumble</strong>). I also use <strong>Zapier</strong> and <strong>Make</strong> for custom automations and webhook‑based integrations.
@@ -234,7 +234,7 @@
             <div class="row">
                 <div class="col-lg-9 mx-auto">
                     <div class="experience-card fade-in">
-                        <h3>Automation Intern (GHL)</h3>
+                        <h3>GHL Expert</h3>
                         <h5 class="text-primary">Brainstorm Solutions · Internship</h5>
                         <p class="text-muted mb-4">June 2, 2025 – Present · Remote</p>
                         <ul>
@@ -453,3 +453,4 @@
     </script>
 </body>
 </html>
+
